kubernetes-network/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: "homework.otus"
    http:
      paths:
      - pathType: Prefix
        path: "/(index.html|homepage)"
        backend:
          service:
            name: nginx-service
            port:
              number: 80
